--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,6 +75,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_below="@+id/linearLayout"
+                    android:fadingEdge="horizontal|vertical"
                     tools:layout_editor_absoluteY="48dp" />
             </android.support.v4.widget.SwipeRefreshLayout>
 
