--- a/app/src/main/res/layout/activity_edit_member.xml
+++ b/app/src/main/res/layout/activity_edit_member.xml
@@ -67,7 +67,7 @@
                         android:layout_height="match_parent">
 
                         <TextView
-                            android:id="@+id/PasswordcheckTextView"
+                            android:id="@+id/OldPassword"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
