--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,19 +24,32 @@
         <!-- The main content view -->
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimary">
 
             <RelativeLayout
                 android:id="@+id/content_frame"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:paddingLeft="18dp"
                 android:paddingRight="18dp">
+
+                <ImageView
+                    android:id="@+id/logeImageView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:background="@null"
+                    android:paddingBottom="60dp"
+                    app:srcCompat="@drawable/toolbar_logo" />
 
                 <TableLayout
                     android:id="@+id/tableLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="match_parent"
+                    android:layout_alignBottom="@+id/logeImageView"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginRight="30dp">
 
                     <TableRow
                         android:layout_width="match_parent"
@@ -44,24 +57,27 @@
 
                         <TextView
                             android:id="@+id/E-mailTextView"
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="match_parent"
-                            android:layout_weight="1"
+                            android:layout_alignStart="@+id/tableLayout"
+                            android:layout_centerVertical="true"
+                            android:layout_weight="0.5"
                             android:gravity="center"
                             android:text="@string/email"
-                            android:textColor="@android:color/black"
-                            android:textSize="@dimen/font_size"
 
-                            />
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/font_size" />
 
                         <EditText
                             android:id="@+id/emailEditText"
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="45dp"
-                            android:layout_weight="2"
+                            android:layout_weight="1.5"
+                            android:background="@null"
+                            android:drawableBottom="@drawable/line"
                             android:ems="10"
                             android:inputType="textEmailAddress"
-                            />
+                            android:textColor="@color/white" />
                     </TableRow>
 
                     <TableRow
@@ -70,23 +86,26 @@
 
                         <TextView
                             android:id="@+id/PasswordTextView"
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="match_parent"
-                            android:layout_weight="1"
+                            android:layout_weight="0.5"
                             android:gravity="center"
                             android:text="@string/password"
-                            android:textColor="@android:color/black"
+                            android:textColor="@color/white"
                             android:textSize="@dimen/font_size" />
 
                         <EditText
                             android:id="@+id/passwordEditText"
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="45dp"
                             android:layout_above="@+id/storeLoginButton"
                             android:layout_alignParentEnd="true"
-                            android:layout_weight="2"
+                            android:layout_weight="1.5"
+                            android:background="@null"
+                            android:drawableBottom="@drawable/line"
                             android:ems="10"
-                            android:inputType="textPassword" />
+                            android:inputType="textPassword"
+                            android:textColor="@color/white" />
                     </TableRow>
 
                     <TableRow>
@@ -102,8 +121,13 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
                     android:layout_below="@+id/tableLayout"
+                    android:layout_marginLeft="110dp"
+                    android:layout_marginRight="110dp"
+                    android:layout_marginTop="30dp"
                     android:layout_weight="1"
-                    android:text="@string/login" />
+                    android:background="@drawable/login_button_background"
+                    android:text="@string/login"
+                    android:textColor="@color/white" />
 
             </RelativeLayout>
         </ScrollView>
@@ -112,7 +136,10 @@
             android:id="@+id/drawerListView"
             android:layout_width="240dp"
             android:layout_height="match_parent"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
             android:layout_gravity="start"
+            android:layout_marginEnd="18dp"
             android:background="@drawable/drawlayout_background"
             android:choiceMode="singleChoice"
             android:divider="@android:color/transparent"
