--- a/app/src/main/res/layout/activity_edit_existed_photo.xml
+++ b/app/src/main/res/layout/activity_edit_existed_photo.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.cce.nkfust.tw.bentoofking.EditPhotoActivity">
+    tools:context="com.cce.nkfust.tw.bentoofking.EditExistedPhotoActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
