--- a/app/src/main/res/layout/activity_edit_store.xml
+++ b/app/src/main/res/layout/activity_edit_store.xml
@@ -301,7 +301,7 @@
 
 
                 <Button
-                    android:id="@+id/nextButton"
+                    android:id="@+id/completeButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
