--- a/app/src/main/res/layout/activity_2_check_storeinfonew.xml
+++ b/app/src/main/res/layout/activity_2_check_storeinfonew.xml
@@ -68,7 +68,7 @@
                         android:gravity="left|center_vertical"
                         android:paddingLeft="8dp"
                         android:paddingRight="8dp"
-                        android:text="櫻花自助餐"
+                        android:text="載入中..."
                         android:textColor="#FFFFFF"
                         android:textSize="16sp" />
                 </LinearLayout>
@@ -185,7 +185,7 @@
                             android:gravity="left|center_vertical"
                             android:paddingLeft="8dp"
                             android:paddingRight="8dp"
-                            android:text="120"
+                            android:text="0"
                             android:textColor="#FFFFFF"
                             android:textSize="16sp" />
                     </LinearLayout>
