--- a/app/src/main/res/layout/activity_edit_existed_photo.xml
+++ b/app/src/main/res/layout/activity_edit_existed_photo.xml
@@ -178,7 +178,7 @@
                 android:layout_marginBottom="10dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:text="@string/next" />
+                android:text="@string/complete" />
 
         </RelativeLayout>
 
