--- a/app/src/main/res/menu/map_toolbar_menu.xml
+++ b/app/src/main/res/menu/map_toolbar_menu.xml
@@ -7,8 +7,8 @@
         app:showAsAction="ifRoom"
         app:actionViewClass="android.support.v7.widget.SearchView" ></item>
     <item
-        android:id="@+id/mapItem"
-        android:icon="@drawable/ic_map"
-        android:title="@string/map"
+        android:id="@+id/loactionItem"
+        android:icon="@drawable/ic_location"
+        android:title=""
         app:showAsAction="ifRoom"></item>
 </menu>
