--- a/app/src/main/res/layout/activity_become_have_store.xml
+++ b/app/src/main/res/layout/activity_become_have_store.xml
@@ -64,7 +64,7 @@
                             android:textSize="@dimen/font_size" />
 
                         <EditText
-                            android:id="@+id/e-mailEditText"
+                            android:id="@+id/nameEditText"
                             android:layout_width="wrap_content"
                             android:layout_height="45dp"
                             android:layout_weight="2"
@@ -87,7 +87,7 @@
                             android:textSize="@dimen/font_size" />
 
                         <EditText
-                            android:id="@+id/passwordEditText"
+                            android:id="@+id/addressEditText"
                             android:layout_width="wrap_content"
                             android:layout_height="45dp"
                             android:layout_weight="2"
@@ -110,7 +110,7 @@
                             android:textSize="@dimen/font_size" />
 
                         <EditText
-                            android:id="@+id/passwordCheckEditText"
+                            android:id="@+id/phoneEditText"
                             android:layout_width="wrap_content"
                             android:layout_height="45dp"
                             android:layout_weight="2"
