--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -77,7 +77,8 @@
                             android:drawableBottom="@drawable/line"
                             android:ems="10"
                             android:inputType="textEmailAddress"
-                            android:textColor="@color/white" />
+                            android:textColor="@color/white"
+                            android:textCursorDrawable="@null"/>
                     </TableRow>
 
                     <TableRow
@@ -105,7 +106,8 @@
                             android:drawableBottom="@drawable/line"
                             android:ems="10"
                             android:inputType="textPassword"
-                            android:textColor="@color/white" />
+                            android:textColor="@color/white"
+                            android:textCursorDrawable="@null"/>
                     </TableRow>
 
                     <TableRow>
