--- a/app/src/main/res/layout/activity_store_login.xml
+++ b/app/src/main/res/layout/activity_store_login.xml
@@ -75,7 +75,8 @@
                             android:drawableBottom="@drawable/line"
                             android:ems="10"
                             android:inputType="textEmailAddress"
-                            android:textColor="@color/white" />
+                            android:textColor="@color/white"
+                            android:textCursorDrawable="@null"/>
                     </TableRow>
 
                     <TableRow
@@ -103,7 +104,8 @@
                             android:drawableBottom="@drawable/line"
                             android:ems="10"
                             android:inputType="textPassword"
-                            android:textColor="@color/white" />
+                            android:textColor="@color/white"
+                            android:textCursorDrawable="@null"/>
                     </TableRow>
 
                     <TableRow>
