--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#fc9c46</color>
     <color name="white">#ffffff</color>
     <color name="drawerFont">#81511c</color>
-
+    <color name="list_item">#f9eed8</color>
+    <color name="list_pressed">#ffda8b</color>
 </resources>
