--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,7 @@
                 android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="#ffda8b"
                 android:orientation="horizontal">
 
                 <Button
@@ -39,7 +40,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@drawable/main_button_style"
+                    android:background="#00FFFFFF"
                     android:text="@string/location"
                     android:textColor="@color/white" />
 
@@ -48,7 +49,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@drawable/main_button_style"
+                    android:background="#00FFFFFF"
                     android:text="@string/sort"
                     android:textColor="@color/white" />
 
@@ -57,7 +58,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@drawable/main_button_style"
+                    android:background="#00FFFFFF"
                     android:text="@string/filter"
                     android:textColor="@color/white" />
 
@@ -75,6 +76,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_below="@+id/linearLayout"
+                    android:background="#f9eed8"
                     android:fadingEdge="horizontal|vertical"
                     tools:layout_editor_absoluteY="48dp" />
             </android.support.v4.widget.SwipeRefreshLayout>
