--- a/app/src/main/res/drawable-v21/comment_item_selector.xml
+++ b/app/src/main/res/drawable-v21/comment_item_selector.xml
@@ -2,4 +2,7 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     android:color="@color/list_pressed">
     <item android:drawable="@color/list_item"/>
+    <stroke
+        android:width="1.0dp"
+        android:color="#59493f" />
 </ripple>
