--- a/app/src/main/res/layout/activity_2_check_storeinfonew.xml
+++ b/app/src/main/res/layout/activity_2_check_storeinfonew.xml
@@ -44,8 +44,9 @@
                         <ImageView
                             android:id="@+id/storePicture"
                             android:layout_width="match_parent"
-                            android:layout_height="0dp"
+                            android:layout_height="wrap_content"
                             android:layout_weight="0"
+                            android:adjustViewBounds="true"
                             android:scaleType="centerCrop"
                             app:layout_constraintDimensionRatio="16:9"
                             app:srcCompat="@drawable/sakura" />
@@ -364,6 +365,14 @@
                             android:paddingRight="8dp"
                             android:textColor="#FFFFFFFF"
                             android:textSize="16sp" />
+
+                        <ImageButton
+                            android:id="@+id/scrollButton"
+                            android:layout_width="40dp"
+                            android:layout_height="match_parent"
+                            android:layout_marginTop="10dp"
+                            android:layout_weight="0"
+                            app:srcCompat="@android:drawable/arrow_up_float" />
                     </LinearLayout>
 
                     <ListView
