--- a/app/src/main/res/drawable-v21/comment_item_selector.xml
+++ b/app/src/main/res/drawable-v21/comment_item_selector.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     android:color="@color/list_pressed">
-    <item android:drawable="@color/list_item"/>
+    <item android:drawable="@drawable/comment_background"/>
     <stroke
         android:width="3.0dp"
         android:color="#59493f" />
