--- a/app/src/main/res/layout/activity_2_check_storeinfonew.xml
+++ b/app/src/main/res/layout/activity_2_check_storeinfonew.xml
@@ -368,11 +368,13 @@
 
                         <ImageButton
                             android:id="@+id/scrollButton"
-                            android:layout_width="40dp"
+                            android:layout_width="50dp"
                             android:layout_height="match_parent"
                             android:layout_marginTop="10dp"
                             android:layout_weight="0"
-                            app:srcCompat="@android:drawable/arrow_up_float" />
+                            android:background="#00FFFFFF"
+                            android:scaleType="centerInside"
+                            app:srcCompat="@drawable/comment_scroll_up" />
                     </LinearLayout>
 
                     <ListView
