--- a/app/src/main/res/layout/activity_2_check_storeinfonew.xml
+++ b/app/src/main/res/layout/activity_2_check_storeinfonew.xml
@@ -14,8 +14,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:background="?attr/colorPrimary"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        android:theme="@style/AppTheme.AppBarOverlay"
+        app:popupTheme="@style/AppTheme.PopupOverlay"
         app:title="載入中..." />
 
     <android.support.v4.widget.DrawerLayout
