--- a/app/src/main/res/layout/activity_2_check_storeinfonew.xml
+++ b/app/src/main/res/layout/activity_2_check_storeinfonew.xml
@@ -370,10 +370,10 @@
                             android:id="@+id/scrollButton"
                             android:layout_width="40dp"
                             android:layout_height="match_parent"
-                            android:layout_marginTop="0dp"
                             android:layout_weight="0"
                             android:background="#00FFFFFF"
-                            android:scaleType="centerInside"
+                            android:padding="5dp"
+                            android:scaleType="centerCrop"
                             app:srcCompat="@drawable/comment_scroll_up" />
                     </LinearLayout>
 
