--- a/app/src/main/res/layout/alertdialog_report.xml
+++ b/app/src/main/res/layout/alertdialog_report.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginBottom="10dp"
-    android:layout_marginLeft="25dp"
-    android:layout_marginRight="20dp"
-    android:layout_marginTop="10dp">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/titleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="10dp"
         android:text="@string/title"
         android:textColor="@android:color/black"
         android:textSize="18sp" />
@@ -21,6 +20,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/titleTextView"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="20dp"
         android:ems="10"
         android:inputType="textPersonName" />
 
@@ -30,6 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/titleEditText"
+        android:layout_marginLeft="25dp"
         android:layout_marginTop="5dp"
         android:text="@string/content"
         android:textColor="@android:color/black"
@@ -41,6 +43,8 @@
         android:layout_height="100dp"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/contentTextView"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="20dp"
         android:ems="10"
         android:gravity="top|left"
         android:inputType="text|textMultiLine|textPersonName"
