--- a/app/src/main/res/layout/admin_item.xml
+++ b/app/src/main/res/layout/admin_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/storeLinearLayout"
+    android:id="@+id/LinearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f9eed8"
@@ -11,16 +11,16 @@
     android:paddingTop="10dp">
 
     <TextView
-        android:id="@+id/storeTextView"
+        android:id="@+id/titleTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="店家名稱"
+        android:text="名稱"
         android:textSize="18sp" />
 
     <TextView
-        android:id="@+id/noteTextView"
+        android:id="@+id/subtitleTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="5dp"
-        android:text="備註" />
+        android:text="內容" />
 </LinearLayout>
