--- a/app/src/main/res/layout/bug_report.xml
+++ b/app/src/main/res/layout/bug_report.xml
@@ -52,7 +52,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/completeButton"
             android:layout_width="69dp"
             android:layout_height="38dp"
             android:layout_marginBottom="8dp"
