--- a/app/src/main/res/layout/storelistview_item.xml
+++ b/app/src/main/res/layout/storelistview_item.xml
@@ -9,7 +9,9 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/border"
         android:layout_width="match_parent"
-        android:layout_height="110dp">
+        android:layout_height="110dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true">
 
         <ImageView
             android:id="@+id/storeIcon"
