--- a/app/src/main/res/menu/toolbar_more.xml
+++ b/app/src/main/res/menu/toolbar_more.xml
@@ -10,4 +10,7 @@
     <item
         android:id="@+id/item3"
         android:title="Item" />
+    <item
+        android:id="@+id/item4"
+        android:title="item4" />
 </menu>
