--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,5 @@
     <color name="drawerFont">#81511c</color>
     <color name="list_item">#f9eed8</color>
     <color name="list_pressed">#ffda8b</color>
-
+    <color name="checkopponenttoolbar">#3399cc</color>
 </resources>
