--- a/app/src/main/res/layout/check_opponent_list.xml
+++ b/app/src/main/res/layout/check_opponent_list.xml
@@ -14,9 +14,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:background="#3399cc"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-
+        android:theme="@style/AppTheme.AppBarOverlay"
+        app:popupTheme="@style/AppTheme.PopupOverlay"
         app:title="對手清單" />
 
     <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
