--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#fc9c46</color>
-    <color name="colorPrimaryDark">#f0fc9c46</color>
-    <color name="colorAccent">#fc9c46</color>
+    <color name="colorPrimary">#3399cc</color>
+    <color name="colorPrimaryDark">#f03399cc</color>
+    <color name="colorAccent">#3399cc</color>
     <color name="white">#ffffff</color>
     <color name="drawerFont">#81511c</color>
     <color name="list_item">#f9eed8</color>
